Prevent navbar from overlapping content

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -29,7 +29,6 @@
 
 
 .banner-hero {
-  margin-top: 30px;
   background-color: #272C32;
   background-image: url("https://images.unsplash.com/photo-1501962679900-bea61483313b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1469&q=80");
   background-position: center;
@@ -38,6 +37,7 @@
   justify-content: center;
   align-items: top;
   height: 550px;
+  margin-top: -20px;
 }
 
 
